--- a/.eslintrc
+++ b/.eslintrc
@@ -2,14 +2,15 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": [
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "no-loops"
   ],
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "airbnb-base"
   ],
   "rules": {
-    "no-console": 0 // Whether block console.log statement.
+    "no-console": 0,            // Whether block console.log statement.
+    "no-loops/no-loops": 2      // use map / forEach instead of for / while
   }
 }
