Feat: Add tsconfig for eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,9 @@
 {
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "project": "tsconfig.eslintrc.json"
   },
-  "plugins": [
-    "no-loops",
-    "prettier",
-    "@typescript-eslint"
-  ],
+  "plugins": ["no-loops", "prettier", "@typescript-eslint"],
   "extends": [
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
@@ -16,9 +12,10 @@
     "prettier"
   ],
   "rules": {
-    "no-console": "off",               // Whether block console.log statement.
-    "no-loops/no-loops": "error",      // use map / forEach instead of for / while
+    "no-console": "off", // Whether block console.log statement.
+    "no-loops/no-loops": "error", // use map / forEach instead of for / while
     "prettier/prettier": "error",
-    "no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "class-methods-use-this": "warn"
   }
 }
