Bugfix: Add eslint-import-resolver

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
   "parserOptions": {
     "project": "tsconfig.eslintrc.json"
   },
-  "plugins": ["no-loops", "prettier", "@typescript-eslint"],
+  "plugins": ["no-loops", "prettier", "@typescript-eslint", "import"],
   "extends": [
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
@@ -17,5 +17,13 @@
     "prettier/prettier": "error",
     "@typescript-eslint/no-unused-vars": "off",
     "class-methods-use-this": "warn"
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {}
+    }
   }
 }
