--- a/tsconfig.eslintrc.json
+++ b/tsconfig.eslintrc.json
@@ -4,7 +4,7 @@
     "types": ["jest"]
   },
   "include": [
-    "src", "tests"
+    "src", "tests", "jest.config.ts"
   ],
   "exclude": [
     "node_modules"
